--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,14 @@
 <changelog>
 
     <version
+        name="4.11.10"
+        description="September 23rd, 2019">
+        <!-- fix sending videos -->
+        <!-- maybe fix receiving MMS on xiomia devices -->
+        <text>Improvements to MMS</text>
+    </version>
+
+    <version
         name="4.11.9"
         description="September 16th, 2019">
         <!-- Lifetime purchase is now $10.99, again -->
