--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="4.11.11"
+        description="October 4th, 2019">
+        <!-- MMS changes for librsry -->
+        <text>Improvements to MMS</text>
+    </version>
+
+    <version
         name="4.11.10"
         description="September 23rd, 2019">
         <!-- fix sending videos -->
