--- a/shared/src/main/res/layout/item_attached_image.xml
+++ b/shared/src/main/res/layout/item_attached_image.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/attached_image"
-        android:layout_width="@dimen/attached_image_size"
-        android:layout_height="@dimen/attached_image_size"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
@@ -17,14 +17,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp">
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp">
 
         <FrameLayout
             android:id="@+id/remove_image"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
             android:layout_marginEnd="12dp"
             android:contentDescription="@string/remove_image"
             android:foreground="?android:attr/selectableItemBackgroundBorderless">
@@ -46,8 +45,6 @@
             android:id="@+id/edit_image"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="12dp"
             android:contentDescription="@string/edit_image"
             android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
