--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,12 +19,13 @@
     <version
         name="4.12.0"
         description="October 11th, 2019">
+        <!-- allow editing the title of individual conversations -->
         <text>Revamp attachments and drafts for media:</text>
-        <text>- Allow for viewing all of the images that are currently attached (instead of just providing a counter for the number attached)</text>
-        <text>- Allow for drafts of all the different media attached (instead of only creating a draft from the most recent image selected)</text>
-        <text>- Allow for different types of media being selected together (send a video along with an image, audio, whatever, during the same message)</text>
-        <text>- Allow editing/cropping any of the still images that are selected (instead of just the most recent)</text>
-        <text>- UI improvements for attachments</text>
+        <text>> Allow for viewing all of the images that are currently attached (instead of just providing a counter for the number attached)</text>
+        <text>> Allow for drafts of all the different media attached (instead of only creating a draft from the most recent image selected)</text>
+        <text>> Allow for different types of media being selected together (send a video along with an image, audio, whatever, during the same message)</text>
+        <text>> Allow editing/cropping any of the still images that are selected (instead of just the most recent)</text>
+        <text>> UI improvements for attachments</text>
     </version>
 
     <version
