update changelog again

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="4.13.2"
         description="October 28th, 2019">
         <!-- change the max lines for the message text entry, if an image is attached, so that it does not overflow the text entry -->
+        <!-- clear attachments more quickly, after sending a message -->
         <text>Bug fixes</text>
     </version>
 
