--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="4.13.3"
-        description="November 1st, 2019">
+        description="November 2nd, 2019">
         <!-- Fix issue with contact images not showing in the notification, on Android Q -->
         <text>Improvements for Android Q</text>
         <text>Performance improvements</text>
