--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="4.14.2"
-        description="December 2nd, 2019">
+        description="December 4th, 2019">
         <!-- Convert from Firebase JobDispatcher to WorkManager -->
         <text>Bug fixes</text>
     </version>
