--- a/api_implementation/src/main/res/values-zh-rCN/api_string.xml
+++ b/api_implementation/src/main/res/values-zh-rCN/api_string.xml
@@ -28,6 +28,7 @@
     <string name="api_phone_number">电话号码</string>
     <string name="api_connecting">正在连接服务器…</string>
     <string name="api_device_error">添加设备出错啦！重试看看(・∀・)</string>
+    <string name="api_add_second_primary_device">似乎你的账户中已经有一个主设备（%1$s），你只能设置一个主设备！将主设备更换为当前设备？</string>
     <string name="api_yes">是</string>
     <string name="api_no">不</string>
     <string name="api_no_email">你还没输入邮箱呢</string>
