update the changelog

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="4.14.4"
+        description="Unreleased">
+        <text>Translation updates</text>
+    </version>
+
+    <version
         name="4.14.3"
         description="December 10th, 2019">
         <!-- Catch exception scheduling more than 100 jobs? Very rare occurrence. -->
