update version number

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,8 @@
 
     <version
         name="4.14.4"
-        description="Unreleased">
+        description="December 16th, 2019">
+        <text>Bug fixes</text>
         <text>Translation updates</text>
     </version>
 
