prepare next version

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="4.14.7"
+        description="Unreleased">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="4.14.6"
         description="December 26th, 2019">
         <text>Bug fixes</text>
