add link to open source project in the 'about' section

--- a/shared/src/main/res/xml/about.xml
+++ b/shared/src/main/res/xml/about.xml
@@ -17,18 +17,23 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategoryCompat
-        android:title="@string/app_info">
+    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategoryCompat android:title="@string/app_info">
+
+        <Preference
+            android:key="@string/pref_about_open_source"
+            android:title="@string/open_source_title"
+            android:summary="@string/open_source_summary"
+            app:iconSpaceReserved="false" />
 
         <Preference
             android:key="@string/pref_about_changelog"
             android:title="@string/changelog"
-            app:iconSpaceReserved="false"/>
+            app:iconSpaceReserved="false" />
 
         <Preference
             android:key="@string/pref_about_app_version"
             android:title="@string/app_version"
-            app:iconSpaceReserved="false"/>
+            app:iconSpaceReserved="false" />
 
         <Preference
             android:key="@string/pref_about_device_info"
@@ -37,38 +42,37 @@
 
     </xyz.klinker.messenger.shared.view.MaterialPreferenceCategoryCompat>
 
-    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategoryCompat
-        android:title="@string/platform_info">
+    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategoryCompat android:title="@string/platform_info">
 
+        <Preference
+            android:key="@string/pref_about_copyright"
+            android:summary="@string/copyright_summary"
+            android:title="@string/copyright"
+            app:iconSpaceReserved="false" />
+
+        <Preference
+            android:key="@string/pref_website"
+            android:summary="@string/access_messages_from_any_device"
+            android:title="@string/website"
+            app:iconSpaceReserved="false" />
+
+        <Preference
+            android:key="@string/pref_supported_platforms"
+            android:summary="@string/supported_platforms_summary"
+            android:title="@string/supported_platforms"
+            app:iconSpaceReserved="false" />
+
+        <Preference
+            android:key="@string/pref_about_privacy_policy"
+            android:summary="@string/privacy_policy_summary"
+            android:title="@string/privacy_policy"
+            app:iconSpaceReserved="false" />
+
+        <!--<Preference
+            android:key="@string/pref_about_beta"
+            android:summary="@string/beta_disclaimer" />
+            app:iconSpaceReserved="false"-->
 
     </xyz.klinker.messenger.shared.view.MaterialPreferenceCategoryCompat>
-    <Preference
-        android:key="@string/pref_about_copyright"
-        android:title="@string/copyright"
-        android:summary="@string/copyright_summary"
-        app:iconSpaceReserved="false" />
-
-    <Preference
-        android:key="@string/pref_website"
-        android:title="@string/website"
-        android:summary="@string/access_messages_from_any_device"
-        app:iconSpaceReserved="false"/>
-
-    <Preference
-        android:key="@string/pref_supported_platforms"
-        android:title="@string/supported_platforms"
-        android:summary="@string/supported_platforms_summary"
-        app:iconSpaceReserved="false"/>
-
-    <Preference
-        android:key="@string/pref_about_privacy_policy"
-        android:title="@string/privacy_policy"
-        android:summary="@string/privacy_policy_summary"
-        app:iconSpaceReserved="false" />
-
-    <!--<Preference
-        android:key="@string/pref_about_beta"
-        android:summary="@string/beta_disclaimer" />
-        app:iconSpaceReserved="false"-->
 
 </PreferenceScreen>
