update the changelog

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,9 +17,10 @@
 <changelog>
 
     <version
-        name="4.14.7"
-        description="Unreleased">
-        <text>Bug fixes</text>
+        name="5.0.0"
+        description="January 1st, 2020">
+        <text>The Pulse Android app is now fully open source!</text>
+        <text>Check it out: https://github.com/klinker-apps/pulse-android</text>
     </version>
 
     <version
