update the build number and changelog

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="5.0.1"
+        description="January 6th, 2020">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="5.0.0"
         description="January 1st, 2020">
         <text>The Pulse Android app is now fully open source!</text>
