--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -133,6 +133,7 @@
     <string name="pref_message_backup" translatable="false">message_backup</string>
     <string name="pref_auto_reply" translatable="false">auto_reply</string>
 
+    <string name="pref_feature_settings" translatable="false">feature_settings</string>
     <string name="pref_mms_configuration" translatable="false">mms_configuration</string>
     <string name="pref_mms_size" translatable="false">mms_size_limit</string>
     <string name="pref_convert_to_mms" translatable="false">sms_to_mms_message_conversion_count</string>
