--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -133,6 +133,7 @@
     <string name="pref_secure_private_conversations" translatable="false">private_conversations_passcode</string>
     <string name="pref_private_conversation_passcode_last_entry" translatable="false">private_conversations_passcode_last_entry</string>
     <string name="pref_smart_reply" translatable="false">smart_reply</string>
+    <string name="pref_smart_reply_timeout" translatable="false">smart_reply_timeout</string>
     <string name="pref_internal_browser" translatable="false">internal_browser</string>
     <string name="pref_delayed_sending" translatable="false">delayed_sending</string>
     <string name="pref_cleanup_messages" translatable="false">cleanup_old_messages</string>
