Update the changelog

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,8 +18,9 @@
 
     <version
         name="5.1.0"
-        description="January 10th, 2020">
+        description="January 13th, 2020">
         <text>Update settings organization to start accepting open source contributions</text>
+        <text>Bug fixes</text>
     </version>
 
     <version
