--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,14 @@
 <changelog>
 
     <version
+        name="5.2.0"
+        description="February 18th, 2020">
+        <text>New settings to allow you to block or mute messages from senders not in your contact list, to help prevent spam</text>
+        <text>If you receive a spam message as a group conversation, you can now "blacklist all" phone numbers involved in the conversation</text>
+        <text>Bug fixes for Android Auto</text>
+    </version>
+
+    <version
         name="5.1.0"
         description="January 13th, 2020">
         <text>Update settings organization to start accepting open source contributions</text>
