on group conversations, add an option to blacklist all the participants

--- a/shared/src/main/res/menu/fragment_messages_group.xml
+++ b/shared/src/main/res/menu/fragment_messages_group.xml
@@ -49,6 +49,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/menu_conversation_blacklist_all"
+        android:icon="@drawable/ic_block"
+        android:title="@string/menu_conversation_blacklist_all"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_conversation_schedule"
         android:icon="@drawable/ic_schedule"
         android:title="@string/menu_conversation_schedule"
