add preference for how to handle receiving a message from an unknown number

--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -274,4 +274,16 @@
         <item>@string/send_without_signature</item>
     </string-array>
 
+    <string-array name="unknown_numbers">
+        <item>@string/unknown_numbers_default</item>
+        <item>@string/unknown_numbers_mute</item>
+        <item>@string/unknown_numbers_block</item>
+    </string-array>
+
+    <string-array name="unknown_numbers_values">
+        <item>default</item>
+        <item>mute</item>
+        <item>block</item>
+    </string-array>
+
 </resources>
