update release description

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,9 +19,10 @@
     <version
         name="5.2.0"
         description="February 18th, 2020">
-        <text>New settings to allow you to block or mute messages from senders not in your contact list, to help prevent spam</text>
+        <text>New setting to allow you to block or mute messages from senders not in your contact list, to help prevent spam</text>
         <text>If you receive a spam message as a group conversation, you can now "blacklist all" phone numbers involved in the conversation</text>
         <text>Bug fixes for Android Auto</text>
+        <text>Other various bug fixes</text>
     </version>
 
     <version
