--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="5.2.3"
+        description="March 15th, 2020">
+        <text>Improvements for dual SIM devices</text>
+    </version>
+
+    <version
         name="5.2.2"
         description="March 4th, 2020">
         <text>Background work to support new features on the web app</text>
